<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/age_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp"
        android:background="@drawable/textview_border"
        android:padding="8dp"
        android:text="@string/age_default_message"
        android:textSize="22sp" />

    <Button
        android:id="@+id/adult_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adult_button_text"
        android:textSize="26sp" />

    <Button
        android:id="@+id/under18_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/under18_button_text"
        android:textColor="@android:color/black" />


</LinearLayout>