<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:background="@drawable/license_border"
        android:padding="16dp"
        android:fillViewport="true">

        <TextView
            android:id="@+id/license_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/license_text" />

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/accept_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scrollable"
        android:layout_margin="16dp"
        android:text="@string/accept_button_text" />

    <Button
        android:id="@+id/reject_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scrollable"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:text="@string/reject_button_text" />

</RelativeLayout>